News UAT/force-app/main/default/objects/CPQ_Escalation_Rule__mdt/CPQ_Escalation_Rule__mdt.object-meta.xml
<CustomObject>
    <label>CPQ Approval Escalation Rule</label>
    <pluralLabel>CPQ Approval Escalation Rules</pluralLabel>
</CustomObject>