News UAT/force-app/main/default/objects/CPQ_Escalation_Rule__mdt/fields/CutOff__c.field-meta.xml
<CustomField>
    <fullName>CutOff__c</fullName>
    <label>Cutoff Time</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>