News UAT/force-app/main/default/objects/CPQ_Escalation_Rule__mdt/fields/Escalation_1__c.field-meta.xml
<CustomField>
    <fullName>Escalation_1__c</fullName>
    <label>Escalation 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>