News UAT/force-app/main/default/objects/CPQ_Escalation_Rule__mdt/fields/Reminder_1__c.field-meta.xml
<CustomField>
    <fullName>Reminder_1__c</fullName>
    <label>Reminder 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>