News UAT/force-app/main/default/objects/CPQ_Escalation_Rule__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>CutOff__c</columns>
    <columns>Reminder_1__c</columns>
    <columns>Escalation_1__c</columns>
    <columns>Reminder_2__c</columns>
    <columns>Escalation_2__c</columns>
    <columns>Reminder_3__c</columns>
    <columns>Escalation_3__c</columns>
    <columns>Reminder_4__c</columns>
    <columns>Reminder_5__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>